* Fix #2607: Invoice line items not visible until clicked
Note: this commit makes sure the descriptions are visible
   *and* that the height of the textarea control has the same height
   as the other controls on the same line.

--- a/UI/css/system/global.css
+++ b/UI/css/system/global.css
@@ -432,6 +432,8 @@ html, body {
     padding: 0;
 }
 
-.claro textarea.dijitInputInner {
+.claro .dijitTextBox textarea.dijitInputInner {
     outline: none;
+    padding-top: 0;
+    padding-bottom: 0;
 }
